When calculating the number of used pages for a get_system_info() request, also include inactive pages. Fixes #7714.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@43168 a95241bf-73f2-0310-859d-f6bbb57e9c96